k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decase-ai
  namespace: sk-team-08
spec:
  replicas: 2
  selector:
    matchLabels:
      app: decase-ai
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 41ea7741d6ea2b0a77eb2c75861ae389
      labels:
        app: decase-ai
    spec:
      containers:
      - name: decase-ai
        image: amdp-registry.skala-ai.com/skala25a/sk-team-08-decase-ai:1.0.0-14-523cc5ea6ae3
        imagePullPolicy: Always
