k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: decase-ai
  namespace: sk-team-08
spec:
  selector:
    app: decase-ai
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
