k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: decase-cm-tls-ingress
  namespace: sk-team-08
spec:
  ingressClassName: public-nginx
  rules:
  - host: decase-tls.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: decase
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: decase
            port:
              number: 8080
        path: /actuator
        pathType: Prefix
      - backend:
          service:
            name: decase-ai
            port:
              number: 8001
        path: /docs
        pathType: Prefix
      - backend:
          service:
            name: decase-fe
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - decase-tls.skala25a.project.skala-ai.com
    secretName: decase-cm-auto-tls-secret
